# finformer

./: .gitignore  LICENSE  README.md  config.yaml  draft.py  finformer (3).ipynb  finformer-data.ipynb  finformer-model.ipynb  finformer_notebook.ipynb  get_data.py  old_config.yaml  pyproject.toml
config/features/: default.yaml
config/params/: debug.yaml  default.yaml
config/sentiment_model/: roberta.yaml  tiny.yaml
config/training_args/: default.yaml
finformer/: config.py  config.yaml  model.py  seq2seq_trainer.py  trainer.py  utils.py
finformer/configs/: config.yaml
finformer/configs/features/: default.yaml  multivariate.yaml  univariate.yaml  univariate_diff.yaml
finformer/configs/params/: debug.yaml  default.yaml  full.yaml
finformer/configs/sentiment_model/: debug.yaml  default.yaml  finbert.yaml  roberta.yaml  small.yaml  tiny.yaml
finformer/configs/time_series_model/: base.yaml  default.yaml  normal.yaml
finformer/configs/training_args/: debug.yaml  default.yaml  full.yaml
finformer/data/: alphavantage.py  data.py  dataset.py  fmp-config.yaml  fmp.py  kaggle.py  yfinance.py
finformer/model/: config.yaml  draft.py  model.py
finformer/model/sentiment_analysis/: finbert.py
